force-app/main/default/objects/Subscription__c/Subscription__c.object-meta.xml
<CustomObject>
    <description>A subscription by a customer (Account) to purchase solar power from a Shared Solar System over a period of effective dates</description>
    <label>Subscription</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Subscription Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>