force-app/main/default/objects/Subscription__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The last day of the subscription</description>
    <inlineHelpText>The last day of the subscription</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>