force-app/main/default/objects/Subscription__c/fields/Shared_Solar_System__c.field-meta.xml
<CustomField>
    <fullName>Shared_Solar_System__c</fullName>
    <description>The solar energy generating facility to which the customer is subscribed</description>
    <inlineHelpText>The solar energy generating facility to which the customer is subscribed</inlineHelpText>
    <label>Shared Solar System</label>
    <referenceTo>Shared_Solar_System__c</referenceTo>
    <relationshipLabel>Subscription</relationshipLabel>
    <relationshipName>Subscription</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>