force-app/main/default/objects/Subscription__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date when the subscription starts</description>
    <inlineHelpText>The date when the subscription starts</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>