force-app/main/default/objects/Subscription__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The status of the subscription in terms of the effective dates</description>
    <formula>IF( 
   TODAY() &gt;=  Start_Date__c &amp;&amp; TODAY() &lt;= End_Date__c, &apos;Active&apos;, 

   IF( TODAY() &lt; Start_Date__c, &apos;Not Yet Started&apos;, &apos;Expired&apos;)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The status of the subscription in terms of the effective dates</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>