force-app/main/default/objects/Subscription__c/fields/Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Subscriber__c</fullName>
    <description>The customer (Account) that has agreed to purchase power from a Shared Solar System</description>
    <inlineHelpText>The customer (Account) that has agreed to purchase power from a Shared Solar System</inlineHelpText>
    <label>Subscriber</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscription</relationshipLabel>
    <relationshipName>Subscription</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>